# recipe-app-api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: checks.yml
app/: __init__.py
app/app/: settings.py
config/: settings.py  urls.py
core/: admin.py  models.py
core/management/commands/: wait_for_db.py
core/migrations/: 0001_initial.py  0002_ingredient_tag_recipe.py
core/tests/: test_admin.py  test_models.py
core/tests/core/management/: test_commands.py
proxy/: Dockerfile
recipe/: urls.py
recipe/tests/: test_recipe_api.py
recipes/: settings.py  urls.py
src/recipes/: settings.py
user/: serializers.py
user/tests/: test_user_api.py
