[tool.poetry]
name = "recipe_api"
version = "0.1.0"
description = ""
authors = ["Juan Valencia"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.3"
djangorestframework = "~3.14.0"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
