[tool.poetry]
name = "recipes"
version = "0.1.0"
description = ""
authors = ["Juan Valencia"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.3"
djangorestframework = "~3.14.0"
psycopg2 = "^2.9.5"
python-dotenv = "^0.21.0"
parameterized = "^0.8.1"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
